--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -33,20 +33,33 @@ layout: default
         {% if page.modified %}
           <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ page.modified | date: "%Y-%m-%d" }}">{{ page.modified | date: "%B %d, %Y" }}</time></p>
         {% endif %}
-        
-        {% if page.collection == 'teaching' %}
-          <p> {{ page.type }}, <i>{{ page.venue }}</i>, {{ page.date | default: "1900-01-01" | date: "%Y" }} </p>
-        {% elsif page.venue and page.date %}
-          <p>Published in <i>{{ page.venue }}</i>, {{ page.date | default: "1900-01-01" | date: "%Y" }} </p>
-        {% elsif page.date %}
-          <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
+
+        {% if page.collection == 'conference_papers' or page.collection == 'journal_papers' or page.collection == 'other_publications' %}
+          <p>
+          {% if page.published == 'published' %}
+            Published 
+            {% if page.collection == 'conference_papers' %} at
+            {% elsif page.collection == 'journal_papers' %} in
+            {% endif %}
+          {% elsif page.published == 'to_appear' %}
+            To Appear. 
+          {% elsif page.published == 'in_review' %}
+            Under review.
+          {% endif %}
+          <i>{{ page.venue }}</i>, {{ page.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% endif %}
-        
+
+
+        {% if page.paperurl %}
+        <p><a href="{{ page.paperurl }}">Download Paper</a></p>
+        {% endif %}
              
-        {% if page.citation and page.paperurl %}
-          <p>Recommended citation: {{ page.citation }} <a href="{{ page.paperurl }}"><u>{{ page.paperurl }}</u></a></p>
-        {% elsif page.citation %}
-          <p>Recommended citation: {{ page.citation }} </p>
+        {% if page.citation %}
+          <p>Citation: {{ page.citation }} </p>
+        {% endif %}
+
+        {% if page.abstract %}
+          <p><i>Abstract:</i><br /> {{page.abstract}}</p>
         {% endif %}
     
         </header>
